--- a/ci/pipelines/keights.yml
+++ b/ci/pipelines/keights.yml
@@ -82,12 +82,57 @@ jobs:
     input_mapping:
       repo: keights-pr
       version: version-snap
+    output_mapping:
+      artifacts-out: build-cluster-artifacts
     params:
+      CLUSTER: pipe-((git-branch))-1
       KEIGHTS_BRANCH: ((git-branch))
   - task: run-e2e
     file: keights-pr/ci/tasks/run-e2e.yml
     input_mapping:
-      artifacts: build-cluster-artifacts
+      artifacts-in: build-cluster-artifacts
+  on_failure:
+    put: keights-pr
+    params:
+      path: keights-pr
+      status: failure
+
+- name: upgrade-cluster
+  public: true
+  plan:
+  - aggregate:
+    - get: keights-pr
+      trigger: true
+      version: every
+      passed: [build-pull-request]
+    - get: version-snap
+      passed: [build-pull-request]
+  - task: build-initial-cluster
+    file: keights-pr/ci/tasks/build-cluster.yml
+    input_mapping:
+      repo: keights-pr
+      version: version-snap
+    output_mapping:
+      artifacts-out: initial-cluster-artifacts
+    params:
+      START_UPGRADE: troo
+      CLUSTER: pipe-((git-branch))-2
+      KEIGHTS_BRANCH: ((git-branch))
+  - task: upgrade-cluster
+    file: keights-pr/ci/tasks/build-cluster.yml
+    input_mapping:
+      repo: keights-pr
+      version: version-snap
+      artifacts-in: initial-cluster-artifacts
+    output_mapping:
+      artifacts-out: upgraded-cluster-artifacts
+    params:
+      CLUSTER: pipe-((git-branch))-2
+      KEIGHTS_BRANCH: ((git-branch))
+  - task: run-e2e
+    file: keights-pr/ci/tasks/run-e2e.yml
+    input_mapping:
+      artifacts-in: upgraded-cluster-artifacts
   on_failure:
     put: keights-pr
     params:
@@ -102,6 +147,7 @@ jobs:
     version: every
     passed:
     - build-cluster
+    - upgrade-cluster
   - put: keights-pr
     params:
       path: keights-pr
