--- a/stack/cloudformation/master.yml
+++ b/stack/cloudformation/master.yml
@@ -82,6 +82,12 @@ Parameters:
   EtcdDomain:
     Description: Domain name given to etcd Route53 zone.
     Type: String
+  EtcdPrefix:
+    Description: >-
+      Prefix given to etcd hostnames. This will be combined with the
+      availability zone and the value of the EtcdDomain parameter.
+    Type: String
+    Default: etcd
   EtcdVolumeSize:
     Description: Size of etcd volume in GB
     Default: 10
@@ -159,8 +165,8 @@ Resources:
         Variables:
           ASG_NAME: !Ref AWS::StackName
           DNS_TTL: 15
-          HOST_BASE_NAME: etcd
-          HOSTED_ZONE_NAME: !Sub ${EtcdDomain}
+          HOST_BASE_NAME: !Ref EtcdPrefix
+          HOSTED_ZONE_NAME: !Ref EtcdDomain
           HOSTED_ZONE_ID: !Ref HostedZoneId
 
   AutoNamingEventsRule:
@@ -318,7 +324,7 @@ Resources:
                   Environment=KEIGHTS_ETCD_DOMAIN=${EtcdDomain}
                   Environment=KEIGHTS_ETCD_CLUSTER_TOKEN=etcd-${ClusterName}
                   Environment=KEIGHTS_ETCD_IMAGE=${EtcdImage}
-                  Environment=KEIGHTS_PREFIX=etcd
+                  Environment=KEIGHTS_PREFIX=${EtcdPrefix}
                   Environment=KEIGHTS_AZS=${AvailabilityZones},
 
               - path: /etc/systemd/system/keights-volumize.service.d/environment.conf
@@ -355,7 +361,7 @@ Resources:
                   Environment=AWS_REGION=${AWS::Region}
                   Environment=KEIGHTS_CLUSTER_DOMAIN=${ClusterDomain}
                   Environment=KEIGHTS_ETCD_DOMAIN=${EtcdDomain}
-                  Environment=KEIGHTS_PREFIX=etcd
+                  Environment=KEIGHTS_PREFIX=${EtcdPrefix}
                   Environment=KEIGHTS_APISERVER=${LoadBalancer.DNSName}
                   Environment=KEIGHTS_POD_SUBNET=${PodCidr}
                   Environment=KEIGHTS_SERVICE_SUBNET=${ServiceCidr}
