Add encryption to etcd volumes

--- a/stack/cloudformation/master.yml
+++ b/stack/cloudformation/master.yml
@@ -260,6 +260,7 @@ Resources:
       AvailabilityZone: !Select [0, !Split [",", !GetAtt SubnetToAz.AvailabilityZones]]
       Size: !Ref EtcdVolumeSize
       VolumeType: gp2
+      Encrypted: true
       Tags:
         - Key: Name
           Value: !Ref ClusterName
@@ -273,6 +274,7 @@ Resources:
       AvailabilityZone: !Select [1, !Split [",", !GetAtt SubnetToAz.AvailabilityZones]]
       Size: !Ref EtcdVolumeSize
       VolumeType: gp2
+      Encrypted: true
       Tags:
         - Key: Name
           Value: !Ref ClusterName
@@ -286,6 +288,7 @@ Resources:
       AvailabilityZone: !Select [2, !Split [",", !GetAtt SubnetToAz.AvailabilityZones]]
       Size: !Ref EtcdVolumeSize
       VolumeType: gp2
+      Encrypted: true
       Tags:
         - Key: Name
           Value: !Ref ClusterName
