--- a/ci/assets/v1.10/cluster/playbook.yml
+++ b/ci/assets/v1.10/cluster/playbook.yml
@@ -21,6 +21,7 @@
         load_balancer_scheme: '{{ load_balancer_scheme }}'
         etcd_volume_size: '{{ etcd_volume_size }}'
         etcd_internal_device: '{{ etcd_internal_device }}'
+        docker_options: '{{ docker_options }}'
       node_groups: '{{ node_groups }}'
 
   - role: keights-system
