Allow overriding of pause container from kubeadm config file
Previously, the node did not use a config file for `kubeadm join`,
but it is being added here to make adding kubelet options easier.

--- a/keights/resources/usr/lib/systemd/system/keights-kubeadm-init.service
+++ b/keights/resources/usr/lib/systemd/system/keights-kubeadm-init.service
@@ -12,8 +12,7 @@ ExecStart=/bin/sh -c ' \
       --config=/var/lib/kubeadm/config.yaml \
       --ignore-preflight-errors=all \
       --skip-token-print && \
-    touch /var/lib/kubeadm/initialized && \
-    rm /var/lib/kubeadm/config.yaml \
+    touch /var/lib/kubeadm/initialized \
 '
 Restart=on-failure
 RestartSec=10s
