Derive Kubernetes version from keights version in Concourse task
This changes the `build-ami` task to get the version of k8s from
the tag or semver used for the keights version, so the two are
always in sync, and a change to the keights repo is not needed to
build a new version of Kubernetes. Instead, the snapshot semver
can be bumped in the git repo where the semver is stored.

--- a/ci/tasks/build-ami.yml
+++ b/ci/tasks/build-ami.yml
@@ -41,5 +41,12 @@ run:
     first_char=`echo ${version} | cut -c 1`
     [ "${first_char=}" != v ] && version="v${version}"
 
+    k8s_version=`echo ${version} | cut -d - -f 1`
+    first_char=`echo ${k8s_version} | cut -c 1`
+    [ "${first_char=}" = v ] && k8s_version=`echo ${k8s_version} | cut -c 2-100`
+
     cd repo/stack/ami/debian
-    /opt/bin/packer build -var keights-version=${version} build.json
+    /opt/bin/packer build \
+        -var keights-version=${version} \
+        -var k8s-version=${k8s_version} \
+        build.json
