--- a/keights/resources/usr/share/keights/kubeadm-join-config.yaml.template
+++ b/keights/resources/usr/share/keights/kubeadm-join-config.yaml.template
@@ -11,4 +11,5 @@ nodeRegistration:
     cloud-provider: aws
     pod-infra-container-image: {{ .ImageRepository }}/pause:3.1
     node-labels: kubernetes.io/role=node,node-role.kubernetes.io/node=,{{ range $label := .NodeLabels }}{{ $label }},{{ end }}
+    node-ip: {{ .MyIP }}
   name: {{ .NodeName }}
