Switch to iptables mode for kube-proxy
There is bug in 1.11.5 when using kube-proxy in ipvs mode,
described at https://github.com/kubernetes/kubernetes/issues/71071.
For now, 1.11 will be switched to use iptables.

--- a/keights/resources/usr/share/keights/kubeadm-init-config.yaml.template
+++ b/keights/resources/usr/share/keights/kubeadm-init-config.yaml.template
@@ -75,12 +75,9 @@ kubeProxy:
       tcpCloseWaitTimeout: 1h0m0s
       tcpEstablishedTimeout: 24h0m0s
     enableProfiling: false
-    featureGates:
-      SupportIPVSProxyMode: true
     healthzBindAddress: 0.0.0.0:10256
-    mode: ipvs
-    ipvs:
-      excludeCIDRs: null
+    mode: iptables
+    iptables:
       minSyncPeriod: 0s
       syncPeriod: 30s
     metricsBindAddress: 127.0.0.1:10249
