--- a/keights/resources/usr/share/keights/kubeadm-init-config.yaml.template
+++ b/keights/resources/usr/share/keights/kubeadm-init-config.yaml.template
@@ -75,9 +75,12 @@ kubeProxy:
       tcpCloseWaitTimeout: 1h0m0s
       tcpEstablishedTimeout: 24h0m0s
     enableProfiling: false
+    featureGates:
+      SupportIPVSProxyMode: true
     healthzBindAddress: 0.0.0.0:10256
-    mode: iptables
-    iptables:
+    mode: ipvs
+    ipvs:
+      excludeCIDRs: null
       minSyncPeriod: 0s
       syncPeriod: 30s
     metricsBindAddress: 127.0.0.1:10249
