Update IAM policicies for EC2 instances
For nodes:
* sts:AssumeRole - added for e.g. kube2iam. Assumed role still
  must have a trust relationship with node role for the role
  assumption to succeed.
* ec2:ModifyInstanceAttribute is removed - kube-router is no longer
  configured to disable source dest check EC2 instance attribute.
For masters:
* elasticloadbalancing:AddTags - used when creating a service of
  type LoadBalancer.

--- a/stack/cloudformation/common.yml
+++ b/stack/cloudformation/common.yml
@@ -234,6 +234,7 @@ Resources:
               - '*'
           - Effect: Allow
             Action:
+              - elasticloadbalancing:AddTags
               - elasticloadbalancing:AttachLoadBalancerToSubnets
               - elasticloadbalancing:ApplySecurityGroupsToLoadBalancer
               - elasticloadbalancing:CreateLoadBalancer
@@ -292,7 +293,6 @@ Resources:
               - autoscaling:DescribeAutoScalingInstances
               - ec2:DescribeInstances
               - ec2:DescribeVolumes
-              - ec2:ModifyInstanceAttribute
             Resource:
               - '*'
           - Effect: Allow
@@ -305,6 +305,11 @@ Resources:
               - kms:Decrypt
             Resource:
               - !Sub 'arn:aws:kms:${AWS::Region}:${AWS::AccountId}:key/${KmsKeyId}'
+          - Effect: Allow
+            Action:
+              - sts:AssumeRole
+            Resource:
+              - '*'
 
   K8sLambdaAccess:
     Type: AWS::IAM::ManagedPolicy
