--- a/stack/ami/debian/playbook.yml
+++ b/stack/ami/debian/playbook.yml
@@ -63,6 +63,8 @@
     bootstrap_include:
       - apt-transport-https
       - bind9-host
+      - btrfs-progs
+      - btrfs-tools
       - ca-certificates
       - curl
       - dbus
@@ -75,6 +77,7 @@
       - linux-image-amd64
       - logrotate
       - net-tools
+      - nfs-common
       - socat
       - sudo
       - strace
@@ -82,6 +85,7 @@
       - tcpdump
       - traceroute
       - vim-tiny
+      - xfsprogs
 
   tasks:
     - name: install packages for bootstrapping
